cmake_minimum_required(VERSION 3.2)
project(C++_Primer_CH2)

add_executable(2.1_myfirst 2.1_myfirst.cpp)
add_executable(2.2_carrot 2.2_carrot.cpp)
add_executable(2.3_getinfo 2.3_getinfo.cpp)
add_executable(2.4_sqrt 2.4_sqrt.cpp)
add_executable(2.5_ourfunc 2.5_ourfunc.cpp)
add_executable(2.6_convert 2.6_convert.cpp)