cmake_minimum_required(VERSION 3.2)
project(C++_Primer_CH4)

add_executable(4.1_arrayone 4.1_arrayone.cpp)
add_executable(4.2_string 4.2_string.cpp)
add_executable(4.3_instr1 4.3_instr1.cpp)
add_executable(4.4_instr2 4.4_instr2.cpp)
add_executable(4.5_instr3 4.5_instr3.cpp)
add_executable(4.6_numstr 4.6_numstr.cpp)
add_executable(4.7_strtype1 4.7_strtype1.cpp)
add_executable(4.8_strtype2 4.8_strtype2.cpp)
add_executable(4.9_strtype3 4.9_strtype3.cpp)
add_executable(4.10_strtype4 4.10_strtype4.cpp)
add_executable(4.11_structur 4.11_structur.cpp)
add_executable(4.12_assgn_st 4.12_assgn_st.cpp)
add_executable(4.13_arrstruc 4.13_arrstruc.cpp)
add_executable(4.14_address 4.14_address.cpp)
add_executable(4.15_pointer 4.15_pointer.cpp)
add_executable(4.16_init_ptr 4.16_init_ptr.cpp)